removed erroneous -o, see changelog
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/trunk@1184 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/scripts/icmbuild.in
+++ b/icmake/scripts/icmbuild.in
@@ -449,7 +449,7 @@ void build_libraries()
         libsoshared = libso + "." + g_version;
                                             // add option for shared lib
         setGcompiler();
-        g_compiler += " -fPIC -o "; 
+        g_compiler += " -fPIC "; 
 
         for (idx = g_nClasses; idx--; )
             std_cpp(0, TMP_DIR "/o", idx + 1, g_classes[idx], 
