fix URL of stealth, echo -e for the whole rest
git-svn-id: https://svn.openfmi.net/debian-addons-bg/icmake/trunk@2013 d3044522-2ae9-0310-97cb-f8f8e269a004

--- a/debian/rules
+++ b/debian/rules
@@ -72,7 +72,7 @@ get-orig-source:
 	@@[ -d ../tarballs/. ]||mkdir -p ../tarballs
 
 	-@if [ ! -f ../tarballs/$(DEFILE) ] ; then \
-			echo "Downloading $(URL)/$(UPFILE)\nSaving into ../tarballs/$(DEFILE) ..." ; \
+			echo -e "Downloading $(URL)/$(UPFILE)\nSaving into ../tarballs/$(DEFILE) ..." ; \
 			wget --no-check-certificate --quiet -N -nv -T20 -t3 -O \
 					 ../tarballs/$(DEFILE) $(URL)/$(UPFILE) ; \
 	else \
